package SSIT.proto;
option java_package = "com.ssit.proto";
option java_outer_classname = "MessageProto";


enum MessageID
{
	option allow_alias = true;    //允许不同的枚举有相同的值
	LoginModel = 0;               //登录模块
	CSLogin = 1;                  // 登录
	SCLoginResult = 2;             //登录返回
	CSLogout = 3;					//退出
	SCLogoutResult = 4;				//退出返回
	SCFeedBackSaveResult = 5;		//添加或修改反馈意见返回  仅仅定义消息id
					
	SystemModel = 1000; 			//系统管理模块
	SCOrganizeInfoListResult = 1001;	//机构管理列表 返回   使用通用查询请求
	SCSaveOrganizeInfoResult = 1002;	//添加或修改机构返回  仅仅定义消息id
	SCDeleteOrganizeInfoResult = 1003;	//删除机构管理返回    
	SCUserInfoListResult = 1004;		//用户列表返回    使用通用查询请求
	SCSaveUserInfoResult = 1005;		//添加或修用户返回
	SCDeleteUserInfoResult = 1006;		//删除用户返回
	SCAuthorityListResult = 1007;		//权限列表返回		使用通用查询请求
	SCLogInfoListResult = 1008;			//日志列表返回  使用通用查询请求
	SCDeleteLogInfoResult = 1009;		//删除日志返回
	
	SceneModel = 2000; 				//场景模块
	SCCompanyInfoListResult = 2001;		//企业列表返回 	使用通用查询请求
	SCSaveCompanyInfoResult = 2002;		//添加或修改企业返回  仅仅定义消息id
	SCDeleteCompanyInfoResult = 2003;	//删除企业返回
	SCIndustryInfoListResult = 2004;	//行业列表返回  使用通用查询请求
	SCSaveIndustryInfoResult = 2005;	//添加或修改行业返回  仅仅定义消息id
	SCDeleteIndustryInfoResult = 2006;	//删除行业返回
	SCSaveDeviceInfoResult = 2007;		//添加或修改设备信息
	SCDeviceBaseInfolistResult = 2008;		//请求设备列表 通用查询
	SCSaveSceneInfoResult = 2009;		//添加或修改场景返回 仅仅定义消息id
	SCSceneInfoListResult = 2010;		//场景列表返回  使用通用查询请求
	SCDeleteSceneInfoResult = 2011;		//删除场景返回
	SCSwitchDeviceInfolistResult = 2012;		//远程开关列表 使用通用查询请求
	SCSaveSwitchDeviceInfoResult = 2013;			//添加或修改远程开关返回 仅仅定义消息id
	SCDeleteSwitchDeviceInfoResult = 2014;		//删除远程开关返回
	SCBundingSwitchDeviceResult = 2015;			//绑定远程开关返回  仅仅定义消息id
	SCRemoveBundingSwitchDeviceResult = 2016;	//解绑远程开关返回
	SCDeviceTypelistResult = 2017;			//设备类型列表返回
	SCSaveDeviceTypeResult = 2018;			//添加或修改设备类型返回 仅仅定义消息id
	SCDeleteDeviceTypeResult = 2019;		//删除设备类型返回
	SCDeleteDeviceBaseInfoResult = 2020;		//删除设备返回
	SCSwitchDeviceTypeInfolistResult = 2021;	//远程开关类型列表返回
	SCSaveSwitchDeviceTypeResult = 2022;			//添加或修改远程开关类型返回 仅仅定义消息id
	SCDeleteSwitchDeviceTypeResult = 2023;		//删除远程开关类型返回
		
	AccidentModel = 3000;		//预案模块
	SCSaveMeasureTypeResult = 3001;		//添加或修改措施类型返回 仅仅定义消息id
	SCDeleteMeasureTypeResult = 3002;		//删除措施类型返回
	SCMeasureTypelistResult = 3003;		//措施类型列表返回
	SCMeasureInfoListResult = 3004;		//措施列表返回
	SCSaveMeasureResult = 3005;		//添加或修改措施返回 仅仅定义消息id
	SCDeleteMeasureResult = 3006;		//删除措施返回
	SCTaskTypeListResult = 3007;		//应急任务类型列表返回
	SCSaveTaskTypeResult = 3008;			//添加或修改应急任务类型返回 仅仅定义消息id
	SCDeleteTaskTypeResult = 3009;		//删除应急任务类型返回
	SCSaveTaskInfoResult = 3010;		//添加或修改应急任务返回 仅仅定义消息id
	SCDeleteTaskInfoResult = 3011;		//删除应急任务返回
	SCTaskInfoListResult = 3012;		//应急任务列表返回
	SCAccidentListResult = 3015;	//事故列表信息
	CSAddAccident = 3016;		//添加事故
	SCAddAccidentResult = 3017;	//添加事故返回
	SCDeleteAccidentResult = 3018;	//删除事故返回
	CSUpdateAccident = 3019;		//更新事故
	SCUpdateAccidentResult = 3020;		//更新事故返回
	SCAccidentTypeListResult = 3021;		//事故类型列表返回
	SCCharactorTypeListResult = 3022;		//角色类型列表返回
	SCSaveCharactorTypeResult = 3023;		//添加或修改角色类型返回
	SCDeleteCharactorTypeResult = 3024;		//删除角色类型返回
	SCCharacterListResult = 3025;		//角色列表返回
	SCSaveCharactorInfoResult = 3026;	//添加或修改角色返回
	SCDeleteCharactorInfoResult = 3027;		//删除角色返回
	CSAddGroupInfo = 3028;		//添加队伍
	SCAddGroupInfoResult = 3029;	//添加队伍返回
	SCDeleteGroupInfoResult = 3030;		//删除队伍返回
	CSUpdateGroupInfo = 3031;		//更新应急队伍
	SCUpdateGroupInfoResult = 3032;		//更新应急队伍返回
	SCGroupInfoListResult = 3033;		//应急队伍列表返回
	SCEvaluationInfoListResult = 3034;		//评估标准列表返回
	SCSaveEvaluationInfoResult = 3035;		//添加或修改评估标准返回
	SCDeleteEvaluationInfoResult = 3036;	//	删除评估标准返回
	CSSceneEditLockStatList = 3037;			//场景编辑锁定状态列表
	SCSceneEditLockStatListResult = 3038;	//场景编辑锁定状态列表 返回
	CSSchemeEditLockStatList = 3039;		//预案编辑锁定状态列表
	SCSchemeEditLockStatListResult = 3040;	//预案编辑锁定状态列表 返回
	CSUpdateEditLockStat = 3041;		//更新编辑锁定状态
	SCUpdateEditLockStatListResult = 3042;		//更新编辑锁定状态 返回
	CSDeleteCharactorType = 3043;			//删除角色类型
	




	
	CommenModel = 9000;					//通用查询保存模块
	CSCommonQuery = 9001;				//通用查询
	CSCommonSave = 9002;				//通用保存
	CSCommonRemove = 9003;			//通用删除
	SCCommonResult = 9004;			//通用返回结果
	
	
}

enum QueryKey
{
	sallOrganizeInfoList = 0;        //组织信息列表
	userInfoList = 1; 						//用户信息列表
	powerList = 2;   							// 权限信息列表
	logInfoList = 3;   						// 日志信息列表	
	companyList = 4;				//企业信息列表
	industryInfoList = 5;			//行业信息列表
	deviceList = 6;					//设备信息列表
	sceneMgrInfoList = 7;			//场景信息列表
	switchDeviceList = 8;			//远程开关信息列表
	switchDeviceTypeList = 9;		//远程开关类型列表
	switchBundingList = 10;			//远程开关绑定列表
	deviceTypeList  = 11;			//设备类型列表
	skillTypeList = 12;				//措施类型列表
	skillList = 13;					//措施列表
	taskTypeList = 14;				//应急任务类型列表
	taskInfoList = 15;				//应急任务列表
	accidentInfoList = 16;			//事故信息列表
	accidentTypeList = 17;			//事故类型列表
	charactorTypeList = 18;			//角色类型列表
	charactorInfoList = 19;			//角色列表
	evaluationList = 20;			//评估标准列表
	groupInfoList = 21;				//应急组列表
}


enum SaveTarget   
{
	organization = 0;        //organization	
	user = 1;        //user	
	log = 2;        //log
	feed_back = 3;  //feed_back
	company = 4;	//company
	industry = 5;	//industry
	deviceinfo = 6;		//deviceinfo
	drillscene = 7;		//drillscene
	switchdevice = 8;	//switchdevice
	switchdeviceagent = 9;  //switchdeviceagent
	devicetype = 10;	//devicetype
	drillskilltype = 11;		//drillskilltype
	drillskill = 12;			//drillskill
	drillmissiontype = 13;		//drillmissiontype
	drillmission = 14;		//drillmission
	drillmissionpoolagent = 15;		//drillmissionpoolagent
	switchdevicetype = 16;		//switchdevicetype
	drillscheme = 17;		//drillscheme
	drillcharactertype = 18;		//drillcharactertype
	drillcharacter = 19;		//drillcharacter
	drillgroup = 20;		//drillgroup
	drillevaluate = 21;		//drillevaluate
}

enum SysErrorCode
{
	Success = 0;        //成功
	CodeError = 1;     //系统异常
	DataBaseError = 2; //数据库异常
	LogicError = 3;   // 业务异常
	
}